add negative test cases